@@ -2,5 +2,6 @@ EBUILD cds-meta-10.0.1.ebuild 3274 RMD160 a82ace0c96bab5994acfae8aa0e8817a511612
 EBUILD cds-meta-10.0.ebuild 2970 RMD160 e9dfbe1013d61731b4e319bb442298b7682a79b6 SHA1 29bee4ad2a6e052c5e2c9467158e023053e92b0e SHA256 2b8bfd99d8120cc668c1d0a6057449918d523c02ea84b353de8a4b4f3a306358
 EBUILD cds-meta-10.2-r1.ebuild 3326 RMD160 c36750fe6148dfb46e53884efba7c1897c6d9eaf SHA1 6dc8790c883fc4e88ee8b561dc4eac381b178015 SHA256 6b06d4937d29d8e48a2ae10e8963b97e0c80339e5eebd8a08c33f47d5a10bdec
 EBUILD cds-meta-10.3.91.ebuild 3327 RMD160 89be31e7373fa2426003aa8c65e99cd29f6f6abe SHA1 13efca34e85b93c8b570e0220ca6a3e8aabcd280 SHA256 5fb748e183cec555de4106e4d84bca924dc66ecd7de3044c37ccaa9dfd0aba04
-MISC ChangeLog 547 RMD160 feab0d04ea5819baf36b919dbaf93d4e3bf18da7 SHA1 10d98593a08cceeb285da672639750524d46e377 SHA256 8d7b9a8c598625ba778248d9658b6cac84c109d3980bfbe82ef117227cb0c0db
+EBUILD cds-meta-10.4.ebuild 3671 RMD160 6d2a40cd995a141def758a470a279ff96e09aa4b SHA1 b480e863ecfedf5f39d0a72e43c23d12e475601f SHA256 252048da88673dea5e7f4c7dcb3d7134976cf5c42180c662a1d5f42f335b5003
+MISC ChangeLog 679 RMD160 30ed10e24581a8931e84e88429f9c77c1da14671 SHA1 9a7b39788ad4c6ba8f3c1aaf6745a9a9e1a7d2df SHA256 e63d5744dfb42c838ff44ba156c45ed544d2106f6aea9d0d99f3ab62c9c59b43
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
