@@ -1,3 +1,4 @@
 EBUILD cldg-meta-10.3.91.ebuild 5147 RMD160 290f393f821721ba1517021bac26aed8d8226aca SHA1 8b419b9d3f8f4d900e23b64d6d022cccc9e8bf59 SHA256 98ec2521551e91a4f9ff3808dd2776a22b38456e88f55507d0a69cc8268f49bd
-MISC ChangeLog 756 RMD160 914d0e88cb3ef835662eef98aa8e0a46c207719a SHA1 de22c39f6ea22f5c827882ff349ce2833ad04506 SHA256 1bad0024d6e9a281a87af1f62bd33d87343f55dddeb1348211582bdfda650636
+EBUILD cldg-meta-10.4.ebuild 5742 RMD160 3978d4b324b8340b0db15672c40b3ac9f1103b70 SHA1 882ecd189672974514d195c44451892bc0742f43 SHA256 48d0894a41c3f09bdc5f1baac71c26230f61c27b69a531004ce611b8b2eeffa1
+MISC ChangeLog 890 RMD160 437a864f8193613687076ed9777f13d1d14ba67f SHA1 7fa1977b7dfd85e16f71dea2e302b6bd456b7ef5 SHA256 e3102318bab51ecc81309476cc4f3e9ec75efdad73342bef5f586fdec4f95cbe
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
