@@ -2,5 +2,6 @@ EBUILD cldx-meta-10.0.1.ebuild 2655 RMD160 545abac835e9c559b2466fd13e875384d6275
 EBUILD cldx-meta-10.0.ebuild 2413 RMD160 7ac5ffb53055fc8c33dd1bc9df75469521d42170 SHA1 c8c6e7aec7cbee422631dacbda50b73c3a50e002 SHA256 865ff3dda7935992cd7e3d68ba5c00843e610d0f95b596b5112c0723f81a7eef
 EBUILD cldx-meta-10.2-r1.ebuild 2752 RMD160 ae8dbb3123f51dd3b84a36b95600d195dd58a804 SHA1 72ba786b815e01dc8c0891507e7eb9aac795b294 SHA256 a772024c2b8749d8d4c7e5f48f574efa1df6354fb227e47e3ee2c64c7916b0a1
 EBUILD cldx-meta-10.3.91.ebuild 2802 RMD160 e702b218f8d7973bbca740b8175f575a37b86d8c SHA1 773ebd8c788d476a486e1e133903581ea99bb819 SHA256 0f353afbee3309e0df5bbfb9f1a915ee36ea2766ba4e474fe4186f1337e1da38
-MISC ChangeLog 1373 RMD160 97ba5e571cb3ddaa558585b166b7c88f58136051 SHA1 b7943d449da711fcfe5c4441f024be1b21b2a9ad SHA256 b6a78e953504b6f146690dbb826b7a7fe6c347aa4909028c19a74f1340632d12
+EBUILD cldx-meta-10.4.ebuild 3148 RMD160 00fba6f14bef5eed41c7f0b155b5c05ab0b7bc39 SHA1 3944c69768a4621289049e9d664e17650ce8dfda SHA256 37c9a5853a63347f4119c9346fd81c9962beaacc5f26f5f91879f7d47f9f58c3
+MISC ChangeLog 1507 RMD160 e3dc0fbb03a3e13268ec8a7ee176cc613e245826 SHA1 e587c2b43cb7df107331c99adc3822530f6e3db3 SHA256 4727d80dd58d8f5d16a0a1b1a562a02d397b29941728a8de0059cbccf24a330f
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
