@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldg-meta-10.4 (05 Apr 2010)
+
+  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cldg-meta-10.4.ebuild:
+  Bump version.
+
   02 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   cldg-meta-10.3.91.ebuild:
   Add x11-apps/xmessage.
