@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldx-meta-10.4 (05 Apr 2010)
+
+  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cldx-meta-10.4.ebuild:
+  Bump version.
+
   02 Apr 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cldx-meta-10.3.91.ebuild:
   Added x11-apps/xmessage
