@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cds-meta-10.4 (05 Apr 2010)
+
+  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cds-meta-10.4.ebuild:
+  Bump version.
+
 *cds-meta-10.3.91 (01 Apr 2010)
 
   01 Apr 2010; Трацевский Александр
